# MEWpy

./: .flake8  .gitignore  CLAUDE.md  CLEAN_ARCHITECTURE_PLAN.md  CLEAN_ARCHITECTURE_SUMMARY.md  EXAMPLES_AND_DOCUMENTATION_VALIDATION.md  HTML_REPR_IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_VALIDATION.md  IMPROVEMENT_SUMMARY.md  MANIFEST.in  MIGRATION_GUIDE.md  NOTEBOOK_STATUS.md  NOTEBOOK_UPDATES_SUMMARY.md  PERFORMANCE_OPTIMIZATIONS.md  PKG-INFO  PROM_COREGFLUX_ANALYSIS.md  README.md  REFACTORING_SUMMARY.md  REFACTORING_TEST_REPORT.md  RFBA_SRFBA_ANALYSIS.md  RUNTIME_TEST_RESULTS.md  STEADYCOM_BIGM_FIX_SUMMARY.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_coregflux_notebook.py  test_germ_notebook_full.py  test_prom_notebook.py  tox.ini
.github/workflows/: ci.yml  main.yaml
docs/: cobra_module_analysis.md  germ.md  kinetic_analysis_report.md  kinetic_mathematical_fixes.md  kinetic_security_fixes.md  mewpy.cobra.rst  mewpy.com.rst  mewpy.germ.algebra.rst  mewpy.germ.analysis.rst  mewpy.germ.lp.rst  mewpy.germ.models.rst  mewpy.germ.rst  mewpy.germ.solution.rst  mewpy.germ.variables.rst  mewpy.io.engines.rst  mewpy.io.rst  mewpy.model.rst  mewpy.omics.integration.rst  mewpy.omics.rst  mewpy.optimization.evaluation.rst  mewpy.optimization.inspyred.rst  mewpy.optimization.jmetal.rst  mewpy.optimization.rst  mewpy.problems.rst  mewpy.rst  mewpy.simulation.rst  mewpy.solvers.rst  mewpy.util.rst  omics_analysis_report.md  omics_integration_methods_analysis.md  omics_mathematical_soundness_analysis.md  optimization_module_analysis.md  problems_module_analysis.md  requirements.txt  simulation_module_analysis.md  util_module_analysis.md
docs/community/: ADDITIONAL_IMPROVEMENTS.md  ALL_THREE_FIXES_COMPLETE.md  COMMUNITY_BUILDING_OPTIMIZATIONS.md  EXCHANGE_BALANCE_FIX_SUMMARY.md  README.md  SC_SCORE_FIX_SUMMARY.md  community_analysis_report.md  mathematical_validation_report.md
examples/: 01-simulation.ipynb  02-optimization.ipynb  04-ROUproblem.ipynb  05-GOUproblem.ipynb  06-GeckoKOProblem.ipynb  08-community.ipynb  09-crossfeeding.ipynb  10-Ecoli&Yeast-Tyrosine dependent.ipynb  COMMUNITY_MODELS_VERIFICATION.md  GERM_Models.ipynb  GERM_Models_analysis.ipynb  INFEASIBILITY_HANDLING.md  NOTEBOOK_02_ISSUE.md  OPTIMIZATION_SUMMARY.md  RAY_CPLEX_VERIFICATION.md  SCIP_OPTIMIZATIONS.md  scip_limitations_analysis.md  test_02_fixed.py  test_02_harder.py  test_09_community.py
examples/models/ec/: iAF1260.xml
examples/scripts/: MULTIPROCESSING_ANALYSIS.md  coregflux_comprehensive_example.py  factory_methods_example.py  geneopt.py  germ_models_analysis.py  prom_comprehensive_example.py  regulatory_extension_example.py  test_mp.py  test_mp_comprehensive.py
src/mewpy/: __init__.py  logger.py
src/mewpy/cobra/: __init__.py  medium.py  parsimonious.py  util.py
src/mewpy/com/: __init__.py  analysis.py  com.py  regfba.py  similarity.py  steadycom.py
src/mewpy/germ/: __init__.py
src/mewpy/germ/algebra/: __init__.py  algebra_constants.py  algebra_utils.py  expression.py  parsing.py  symbolic.py
src/mewpy/germ/analysis/: __init__.py  analysis_utils.py  coregflux.py  fba.py  integrated_analysis.py  metabolic_analysis.py  pfba.py  prom.py  regulatory_analysis.py  rfba.py  srfba.py
src/mewpy/germ/lp/: __init__.py  linear_containers.py  linear_problem.py  linear_utils.py
src/mewpy/germ/models/: __init__.py  factories.py  metabolic.py  model.py  regulatory.py  regulatory_extension.py  serialization.py  simulator_model.py  unified_factory.py
src/mewpy/germ/solution/: __init__.py  multi_solution.py  summary.py
src/mewpy/germ/variables/: __init__.py  gene.py  interaction.py  metabolite.py  reaction.py  regulator.py  target.py  variable.py  variables_utils.py
src/mewpy/io/: __init__.py  builder.py  director.py  dto.py  reader.py  sbml.py  writer.py
src/mewpy/io/engines/: __init__.py  boolean_csv.py  co_expression_csv.py  cobra_model.py  engine.py  engines_utils.py  json.py  metabolic_sbml.py  reframed_model.py  regulatory_sbml.py  (+1 more)
src/mewpy/model/: __init__.py  gecko.py  kinetic.py  smoment.py
src/mewpy/omics/: __init__.py  expression.py
src/mewpy/optimization/: __init__.py  ea.py
src/mewpy/problems/: __init__.py  cofactor.py  com.py  etfl.py  gecko.py  genes.py  hybrid.py  kinetic.py  optorf.py  optram.py  problem.py  reactions.py
src/mewpy/simulation/: __init__.py  cobra.py  environment.py  germ.py  hybrid.py  kinetic.py  reframed.py  sglobal.py  simulation.py  simulator.py
src/mewpy/solvers/: __init__.py  cplex_solver.py  gurobi_solver.py  ode.py  odespy_solver.py  optlang_solver.py  pyscipopt_solver.py  scikits_solver.py  scipy_solver.py  sglobal.py  solution.py  solver.py
src/mewpy/util/: __init__.py  constants.py  crossmodel.py  graph.py  history.py  html_repr.py  parsing.py  process.py  request.py  utilities.py
src/mewpy/visualization/: envelope.py  escher.py  plot.py
tests/: benchmark_community_building.py  test_a_simulator.py  test_b_problem.py  test_c_optimization.py  test_d_models.py  test_e_germ_problem.py  test_exchange_balance_deprecation.py  test_f_omics.py  test_g_com.py  test_h_kin.py  test_prom_coregflux_validation.py  test_regulatory_extension.py  test_rfba_srfba_validation.py  test_sc_score_bigm_fix.py  test_steadycom_bigm_fix.py
(+19 files in other folders)
